Fix overflow issues on Safari

--- a/src/components/hire/Intro/Intro.module.css
+++ b/src/components/hire/Intro/Intro.module.css
@@ -1,5 +1,5 @@
 .intro {
-	@apply flex items-center p-4 py-8 sm:p-8 sm:py-16 max-w-6xl min-h-[60vh] mx-auto text-left;
+	@apply flex items-center p-4 py-8 sm:p-8 sm:py-16 max-w-6xl min-h-[60vh] mx-auto text-left overflow-hidden;
 
 	h1 {
 		@apply relative text-2xl md:text-6xl text-rp-pine leading-tight font-semibold mb-6;
